2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/script_links.am: Replace ${prefix} => $(datarootdir).

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ../build-aux/relpath: New shell script to compute relative
	path for linked scripts.
	* am/script_links.am: Use relpath, mainly for distros.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/bin_links.am: New Makefile fragment for symlinks within
	$(bindir).

2011-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/script_links.am: Add support for lua scripts; reorganize.

2011-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/script_links.am: New Makefile fragment for linked perl and
	shell scripts.

2011-02-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/man1_links.am: Install manpage links as .so requests.

2011-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/man1_links.am: New Makefile fragment for manpage links.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Distribute the whole tests/ tree.

2010-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (triptrap): New target to first ensure that
	web2c/Makefile exists and then run TRIP and TRAP tests.

2010-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add tests/common-test.pl.

2010-02-18  Karl Berry  <karl@tug.org>

	* tests: new subdir for common test files.

2009-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Import bibtexu (static icu libs only).

2009-05-26  Karl Berry  <karl@tug.org>

	* README: dvipdfm can now be emulated by dvipdfmx.

2009-02-02  Karl Berry  <karl@tug.org>

	* install-sh: rename from install.sh.

2008-05-28  Karl Berry  <karl@tug.org>

	* Makefile.in (default all): always make all, rather than $@.

2008-04-25  Karl Berry  <karl@tug.org>

	* xdvik/Makefile.in (xdvizilla): skip (un)installing this.  debian
	477160, tex-live 24 Apr 2008 02:03:57.

2008-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
