@@ -49,8 +49,7 @@ dvidvi - ?
 
 dviljk - maintained here, by Joachim Schrod
 
-dvipdfmx 20120420 - checked 20apr12
-  ftp://ftpth.mppmu.mpg.de/pub/peb/TLtests/dvipdfmx-20120420.tar.xz
+dvipdfmx - maintained here, by Khaled Hosny, Jonathan Kew
 
 dvipng 1.14 - checked 10may12
   http://mirror.ctan.org/dviware/dvipng/ (but maybe stale)
